--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,38 +1,13 @@
-/* body {
-    padding: 0;
-    margin: 0;
-    background: #f2f6e9;
-}
-.navbar {
-    background:#6ab446;
-}
-.nav-link,
-.navbar-brand {
-    color: #fff;
-    cursor: pointer;
-}
-.nav-link {
-    margin-right: 1em !important;
-}
-.nav-link:hover {
-    color: #000;
-}
-.navbar-collapse {
-    justify-content: flex-end;
-} */
-
  body {
  
     background: rgb(219, 171, 136);
     overflow-x: hidden;
 }
 
-
-
 .my-custom-row{
-    background-color: rgb(253, 243, 204);
-    height: 60%;
-    margin: 1px;
+    background-color: white;
+    /* height: 60%; */
+
 }
 
 .shopLogo{
