--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,3 +14,10 @@
     height: 100px;
     width: 95px;
 }
+
+.error{
+    color: red;
+    font-weight: bold;
+    font-size: 20px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    }
