--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -18,6 +18,10 @@
         <div class="col-sm-4 fs-2">Waiter Availability App</div>
       </div>
 
+      <div class="row error justify-content-center">
+        <td> {{messages.info}}</td>
+      </div>
+
       <div class="d-flex justify-content-center">
         <form action="/" method="post">
           <div class="form-group">
