--- a/views/selectdays.handlebars
+++ b/views/selectdays.handlebars
@@ -33,7 +33,7 @@
 
                 <div class="col-12 fs-5">
 
-                    <form action="/waiter" method="post">
+                    <form action="/waiter/:username" method="post">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" name="day" value="Monday"
                                 id="flexCheckDefault" name="day">
