--- a/views/selectdays.handlebars
+++ b/views/selectdays.handlebars
@@ -33,7 +33,7 @@
 
                 <div class="col-12 fs-5">
 
-                    <form action="/waiter/{{user}}" method="post">
+                    <form action="/waiter/{{user}}" method="post" class="mb-3">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" name="day" value="Monday"
                                 id="flexCheckDefault" name="day">
@@ -94,6 +94,9 @@
                         </button>
 
                     </form>
+                     <a href="/"><button class="btn btn-primary" name="logout" type="submit" value="submit">
+                            Log out
+                        </button></a>
                 </div>
             </div>
 
