working on owner screen

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,9 +15,7 @@
     width: 95px;
 }
 
-.error{
-    color: red;
-    font-weight: bold;
-    font-size: 20px;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    }
+.warning{
+    color: orange; 
+}
+
