--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -35,9 +35,14 @@
               Add
             </button>
           </div>
-
+  <div class="mt-3 mb-3">
           <a href="/waiter/{{name}}">
             Click here to log in
+          </a>
+          </div>
+
+          <a href="/owner">
+            Click here to log in as owner
           </a>
 
         </form>
