--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -32,18 +32,11 @@
 
           <div class="mt-3 mb-3">
             <button class="btn btn-primary" name="login" type="submit" value="submit">
-              Add
+              Log in
             </button>
           </div>
   <div class="mt-3 mb-3">
-          <a href="/waiter/{{name}}">
-            Click here to log in
-          </a>
-          </div>
-
-          <a href="/owner">
-            Click here to log in as owner
-          </a>
+         
 
         </form>
       </div>
