--- a/views/selectdays.handlebars
+++ b/views/selectdays.handlebars
@@ -12,91 +12,104 @@
     <div class="container">
 
         <div class="d-flex flex-row-reverse mb-3 mt-3">
-            
+
             <div class="col-sm-4 fs-2">Waiter Availability</div>
         </div>
 
-
         <div class="d-flex flex-column align-items-center my-custom-row">
-            <div class="entry error">
-                <td> {{messages.info}}</td>
-            </div>
+           
             <div class="row mb-3 mt-3  ">
                 <div class="col fs-2">Welcome {{user}} </div>
             </div>
+             <div class="entry error">
+                <td> {{messages.info}}</td>
+            </div>
+             <div class="entry success">
+                <td> {{messages.good}}</td>
+            </div>
 
             <div class="row mb-3">
-                <div class="col-12 fs-3">Select a maximum of 3 days that are available for you to work</div>
+                <div class="col-12 fs-3">Select the days that are available for you to work</div>
             </div>
+
+            
 
             <div class="row mb-3">
 
                 <div class="col-12 fs-5">
 
                     <form action="/waiter/{{user}}" method="post" class="mb-3">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" name="day" value="Monday"
-                                id="flexCheckDefault" name="day">
-                            <label class="form-check-label" for="flexCheckDefault">
-                                Monday
-                            </label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" name="day" value="Tuesday"
-                                id="flexCheckDefault" name="day">
-                            <label class="form-check-label" for="flexCheckDefault">
-                                Tuesday
-                            </label>
+
+                        <div class="d-flex flex-row">
+                            <div class="form-check m-1">
+                                <input class="form-check-input" type="checkbox" name="day" value="Monday"
+                                    id="flexCheckDefault" name="day">
+                                <label class="form-check-label" for="flexCheckDefault">
+                                    Monday
+                                </label>
+                            </div>
+                            <div class="form-check m-1">
+                                <input class="form-check-input" type="checkbox" name="day" value="Tuesday"
+                                    id="flexCheckDefault" name="day">
+                                <label class="form-check-label" for="flexCheckDefault">
+                                    Tuesday
+                                </label>
+                            </div>
+
+                            <div class="form-check m-1">
+                                <input class="form-check-input" type="checkbox" name="day" value="Wednesday"
+                                    id="flexCheckDefault" name="day">
+                                <label class="form-check-label" for="flexCheckDefault">
+                                    Wednesday
+                                </label>
+                            </div>
+
+                            <div class="form-check m-1">
+                                <input class="form-check-input" type="checkbox" name="day" value="Thursday"
+                                    id="flexCheckDefault" name="day">
+                                <label class="form-check-label" for="flexCheckDefault">
+                                    Thursday
+                                </label>
+                            </div>
+
+                            <div class="form-check m-1">
+                                <input class="form-check-input" type="checkbox" name="day" value="Friday"
+                                    id="flexCheckDefault" name="day">
+                                <label class="form-check-label" for="flexCheckDefault">
+                                    Friday
+                                </label>
+                            </div>
+
+                            <div class="form-check m-1">
+                                <input class="form-check-input" type="checkbox" name="day" value="Saturday"
+                                    id="flexCheckDefault" name="day">
+                                <label class="form-check-label" for="flexCheckDefault">
+                                    Saturday
+                                </label>
+                            </div>
+
+                            <div class="form-check m-1">
+                                <input class="form-check-input" type="checkbox" name="day" value="Sunday"
+                                    id="flexCheckDefault" name="day">
+                                <label class="form-check-label" for="flexCheckDefault">
+                                    Sunday
+                                </label>
+                            </div>
                         </div>
 
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" name="day" value="Wednesday"
-                                id="flexCheckDefault" name="day">
-                            <label class="form-check-label" for="flexCheckDefault">
-                                Wednesday
-                            </label>
+                        <div class="col-md-12 text-center p-3">
+                            <button class="btn btn-primary justify-content-center" name="addDays" type="submit"
+                                value="submit">
+                                Add
+                            </button>
                         </div>
-
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" name="day" value="Thursday"
-                                id="flexCheckDefault" name="day">
-                            <label class="form-check-label" for="flexCheckDefault">
-                                Thursday
-                            </label>
-                        </div>
-
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" name="day" value="Friday"
-                                id="flexCheckDefault" name="day">
-                            <label class="form-check-label" for="flexCheckDefault">
-                                Friday
-                            </label>
-                        </div>
-
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" name="day" value="Saturday"
-                                id="flexCheckDefault" name="day">
-                            <label class="form-check-label" for="flexCheckDefault">
-                                Saturday
-                            </label>
-                        </div>
-
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" name="day" value="Sunday"
-                                id="flexCheckDefault" name="day">
-                            <label class="form-check-label" for="flexCheckDefault">
-                                Sunday
-                            </label>
-                        </div>
-
-                        <button class="btn btn-primary" name="addDays" type="submit" value="submit">
-                            Add
-                        </button>
 
                     </form>
-                     <a href="/"><button class="btn btn-primary" name="logout" type="submit" value="submit">
-                            Log out
-                        </button></a>
+                    <div class="col-md-12 text-center">
+                        <a href="/"><button class="btn btn-primary" name="logout" type="submit" value="submit">
+                                Log out
+                            </button></a>
+                    </div>
                 </div>
             </div>
 
